# tiles

./: CMakeLists.txt  LICENSE  README.md
src/: 2048.cpp  main.cpp  tambola.cpp
